6_gateway_header_modify/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gxmlb-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: test-route
  namespace: default
spec:
  parentRefs:
  - name: gxmlb-gateway
  rules:
  - matches:
      - path:
            type: PathPrefix
            value: /
    filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: "x-new-header"
                value: "This-is-new-header"
            set: 
              - name: "x-site-env"
                value: "test-modified-value"
            remove: ["x-delete-header"]
    backendRefs: 
      - name: test-site-service
        port: 80 
  - backendRefs:
      - name: test-site-service
        port: 80
